# intellectual-club

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml
.github/workflows/: publish-images.yml
docs/: outlets.md  system-design.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  pwa.ts  router.ts  spa.css  svg.d.ts
frontend/src/api/: adminAshApi.ts  client.ts  images.ts  jsonApi.ts  knowledgeBlockFiles.ts  knowledgeBlocksMarkdown.ts
frontend/src/components/: AdministrationNav.vue  BotSelectorModal.vue  BotShareWizardModal.vue  ChatBotFiltersPanel.vue  ChatListRow.vue  CrudHeader.vue  EditableCombobox.vue  ImageThumbnail.vue  KnowledgeBlockLinksCard.vue  KnowledgeBlockListItem.vue  KnowledgeBlocksMarkdownExportModal.vue  KnowledgeBlocksMarkdownImportModal.vue  KnowledgeBlocksPickerModal.vue  KnowledgeTagsManagerPanel.vue  KnowledgeTagsPickerModal.vue  KnowledgeTagsTree.vue  LlmConfigurationNav.vue  LlmConfigurationTagsList.vue  LlmConfigurationTagsManagerPanel.vue  LlmConfigurationTagsPickerModal.vue  MarkdownCodeViewer.vue  ModalWindow.vue  PullToRefresh.vue  ShareWithGroupsModal.vue  StackLayerProvider.vue  StackRouterView.vue  StackToolbarTeleport.vue  ToolBindingListItem.vue  ToolBindingPickerModal.vue  ToolBindingsCard.vue  ToolTypeBadge.vue  ToolTypeSelect.vue  VariablesTable.vue
frontend/src/i18n/: dom.ts  index.ts  messages.ts
frontend/src/types/: api.ts  prismjs.d.ts
frontend/src/utils/: chatItemText.ts  chatMarkdown.ts  chatTitle.ts  clipboard.ts  dates.ts  download.ts  fileSize.ts  markdownCodeMirror.ts  promptMarkdown.ts  scrollableTabs.ts  stableJson.ts  stepStats.ts  syntaxHighlight.ts  tokens.ts
frontend/src/views/: BookmarksIndexView.vue  CatalogsIndexView.vue  ChatView.vue  ChatsIndexView.vue  LoginView.vue  OutletConnectView.vue  UserSettingsView.vue
native_tools/: Cargo.toml  README.md
native_tools/crates/intellectual-club-launcher/: Cargo.toml
native_tools/crates/intellectual-club-launcher/src/: cli.rs  config.rs  fs_utils.rs  gui.rs  main.rs  operations.rs  status.rs
native_tools/crates/openai-oauth/: Cargo.toml
native_tools/crates/openai-oauth/src/: lib.rs  main.rs
native_tools/crates/outlet-core/src/: lib.rs
native_tools/crates/outlet-shell/: Cargo.toml
native_tools/crates/outlet-shell-desktop/src/: main.rs
native_tools/crates/outlet-shell/src/: lib.rs
native_tools/outlet-shell-image/: .env.template  Dockerfile  requirements.additional.txt
outlets/: README.md  outlet_base.py
outlets/rust/: Cargo.toml
outlets/rust/crates/outlet-core/: Cargo.toml
outlets/rust/crates/outlet-core/src/: lib.rs
outlets/rust/crates/outlet-shell-daemon/: Cargo.toml
outlets/rust/crates/outlet-shell-daemon/src/: main.rs
outlets/rust/crates/outlet-shell-desktop/: Cargo.toml
outlets/shell/: Dockerfile  entrypoint.sh  requirements.additional.txt  shell_outlet.py
outlets/tests/: test_outlet_base.py  test_outlet_pairing_url.py  test_shell_outlet_encoding.py  test_shell_outlet_entrypoint.py  test_shell_outlet_files.py  test_shell_outlet_timeout.py
server/: .formatter.exs  .gitignore  AGENTS.md  mix.exs
server/assets/css/: app.css
server/assets/js/: app.js  chat_renderer.js  clipboard.js
server/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs  test_database.exs
server/lib/: intellectual_club.ex  intellectual_club_web.ex
server/lib/intellectual_club/: accounts.ex  application.ex  bots.ex  chat.ex  data_layer.ex  db.ex  duplication.ex  files.ex  knowledge.ex  llm.ex  notifications.ex  outlets.ex  postgres_repo.ex  prompt_variables.ex  repo.ex  resource.ex  sharing.ex  token_counter.ex  tools.ex
server/lib/intellectual_club_web/: ash_json_api_router.ex  endpoint.ex  gettext.ex  live_user_auth.ex  locale.ex  markdown.ex  request_limits.ex  router.ex  telemetry.ex
server/priv/gettext/: default.pot
server/priv/repo/: seeds.exs
server/priv/static/: manifest.webmanifest  service-worker.js
server/test/: test_helper.exs
server/test/support/: accounts_fixtures.ex  conn_case.ex  data_case.ex  (+1 more)
(+614 files in other folders)
