[package]
name = "intellectual-club-launcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
directories.workspace = true
eframe.workspace = true
getrandom.workspace = true
libc.workspace = true
postgresql_archive.workspace = true
postgresql_commands.workspace = true
postgresql_embedded.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
webbrowser.workspace = true
