[package]
name = "outlet-shell-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
outlet-core = { path = "../outlet-core" }
outlet-shell = { path = "../outlet-shell" }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
