[package]
name = "outlet-shell-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
eframe.workspace = true
outlet-core = { path = "../outlet-core" }
outlet-shell = { path = "../outlet-shell" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
webbrowser.workspace = true
